# practice

blockchain/: Cargo.toml
blockchain/src/: lib.rs  main.rs
blockchain/src/ledger/: error.rs  mod.rs  util.rs
blockchain/src/ledger/example/: mod.rs  stupid.rs
css_mm_4e/03/: selector_basics.html
css_mm_4e/04/: inheritance.html
css_mm_4e/05/: styles.css
css_mm_4e/06/: text.html
css_mm_4e/06/css/: styles.css
css_mm_4e/07/: index.html  main.css
css_mm_4e/08/01_image_ex/: image.html  styles.css
css_mm_4e/08/02_gallery_ex/: gallery.html  styles.css
css_mm_4e/10/: styles.css
css_mm_4e/13/: index.html  styles.css
css_mm_4e/14/: styles.css
css_mm_4e/15/: index.html  styles.css
css_mm_4e/16/: index.html
docker/: Dockerfile  docker-compose.yml
elm/: elm-package.json  index.html
elm/effects/: http.elm  random.elm  time.elm  websocket.elm
elm/scaling/: labeled-checkbox.elm  radio-button.elm
elm/user-inputs/: buttons.elm  forms.elm  text-fields.elm
intro_to_algo/: Cargo.toml
intro_to_algo/src/: main.rs
level-up/: db.json  package-lock.json  package.json  webpack.config.js
level-up/src/: Commands.elm  Main.elm  Models.elm  Msgs.elm  Routing.elm  Update.elm  View.elm  index.html  index.js
look/: Pipfile
look/look/: app.py  images.py
look/tests/: test_app.py  test_integration.py
selenium/: .gitignore  app.js  mocha  package-lock.json  package.json  test.js  tests.js
selenium/tests/: main.js
tree/: Cargo.toml
tree/src/: lib.rs
web_server/: 404.html  Cargo.toml  index.html
web_server/src/: lib.rs
(+9 files in other folders)
