[package]
name = "blockchain"
version = "0.1.0"
authors = ["Victor Huberta <victorhuberta@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
objecthash = "0.4.1"
rocket = "0.3.13"
rocket_codegen = "0.3.13"
rocket_contrib = "0.3.13"
uuid = { version = "0.6.5", features = ["v4"] }
reqwest = "0.8.6" # install OpenSSL v1.0.1+ for Linux

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
